Fix display of screenshot items on Firefox

--- a/play.css
+++ b/play.css
@@ -462,7 +462,7 @@ body {
 }
 
 .screenshotItem .screenshotThumbnailContainer {
-  display: inline;
+  display: inline-block;
 }
 
 .screenshotItem.spoiler .screenshotThumbnail {
